# BasicRenderer

./: CMakeLists.txt  README.md  build.bat  build.sh
include/: Material.h  Mesh.h  Object.h  Reader.h  Transform.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: default.frag  default.vert
src/: Material.cc  Mesh.cc  Object.cc  main.cc
